<resources>
    <string name="app_name">House Control Mobile</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="action_control">"Control"</string>
    <string name="action_show_user">"Mostra utilizador"</string>
    <string name="action_get_data">Visualizar Infos</string>
    <string name="action_decrease">"&lt;"</string>
    <string name="action_increase">"&gt;"</string>
    <string name="action_save_all">"Save All"</string>
    <string name="action_get_token">"Token"</string>
    <string name="todo">TODO</string>
</resources>
