<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/labelBlinder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlBtn" />

    <TextView
        android:id="@+id/blinderTxtVw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlBtn"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/hvacTxtVw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlBtn"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/lightTxtVw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlBtn"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/signinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="252dp"
        android:enabled="true"
        android:onClick="signInFunc"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:onClick="signOutFunc"
        android:text="@string/action_sign_out"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/showDataTbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:scrollbars="vertical"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/signOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getInfoBtn" />

    <Button
        android:id="@+id/controlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:onClick="loadSensorsFRD"
        android:text="@string/action_control"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getInfoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:onClick="getDataFRD"
        android:text="@string/action_get_data"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/controlBtn"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doorTxtVw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlBtn"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tempTxtVw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlBtn"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/labelDoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlBtn" />

    <TextView
        android:id="@+id/labelHvac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlBtn" />

    <TextView
        android:id="@+id/labelTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlBtn" />

    <TextView
        android:id="@+id/labelLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/advent_pro_semibold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controlBtn" />

    <Button
        android:id="@+id/decBlinderBtn"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:onClick="decreaseBlinder"
        android:text="@string/action_decrease"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/blinderTxtVw"
        app:layout_constraintEnd_toStartOf="@+id/blinderTxtVw"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelBlinder" />

    <Button
        android:id="@+id/incBlinderBtn"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:onClick="increaseBlinder"
        android:text="@string/action_increase"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/blinderTxtVw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toEndOf="@+id/blinderTxtVw"
        app:layout_constraintTop_toBottomOf="@+id/labelBlinder"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/decDoorBtn"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="decreaseDoor"
        android:text="@string/action_decrease"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/doorTxtVw"
        app:layout_constraintEnd_toStartOf="@+id/blinderTxtVw"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDoor"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/incDoorBtn"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="increaseDoor"
        android:text="@string/action_increase"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/doorTxtVw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toEndOf="@+id/doorTxtVw"
        app:layout_constraintTop_toBottomOf="@+id/labelDoor"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/decHvacBtn"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="decreaseHvac"
        android:text="@string/action_decrease"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/hvacTxtVw"
        app:layout_constraintEnd_toStartOf="@+id/blinderTxtVw"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelHvac"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/incHvacBtn"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="increaseHvac"
        android:text="@string/action_increase"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/hvacTxtVw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toEndOf="@+id/hvacTxtVw"
        app:layout_constraintTop_toBottomOf="@+id/labelHvac"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/decLightBtn"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="decreaseLight"
        android:text="@string/action_decrease"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/lightTxtVw"
        app:layout_constraintEnd_toStartOf="@+id/blinderTxtVw"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLight"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/incLightBtn"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="increaseLight"
        android:text="@string/action_increase"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/lightTxtVw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toEndOf="@+id/lightTxtVw"
        app:layout_constraintTop_toBottomOf="@+id/labelLight"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/decTemperatureBtn"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="decreaseTemperature"
        android:text="@string/action_decrease"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tempTxtVw"
        app:layout_constraintEnd_toStartOf="@+id/blinderTxtVw"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTemperature"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/incTemperatureBtn"
        android:layout_width="37dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:enabled="false"
        android:onClick="increaseTemperature"
        android:text="@string/action_increase"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tempTxtVw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTemperature"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>